--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,6 @@
 /node_modules
 /npm-debug.log
 /package-lock.json
-/release/packager
-/release/*.yaml
-/release/linux-unpacked
-/release/win-unpacked
-/release/.icon-ico
+/release
 /ms.ico
 /TODO.md
